# cygor

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  check-postgres-port.sh  cygor.spec  docker-compose-dev.yaml  docker-compose-up.sh  docker-compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml  oss-safety.yml
cygor/: __init__.py  banner.py  banner.txt  cli.py  cli_plugin.py  enrich.py  enrich_ai_scope.py  enrich_config.py  enumcli.py  jumpbox_config.py  module_loader.py  nextsteps.py  parse.py  parse_ext.py  plugin_loader.py  precheck.py  privileges.py  proxy_config.py  scan.py  service.py  status.py  webctl.py  workspace.py
cygor/credrecon/: __init__.py  credfile_parser.py  default_credentials.yaml  default_credentials.yaml.backup  scanner.py  validation.py
cygor/credrecon/badkeys/: __init__.py  manifest.yaml
cygor/credrecon/badkeys/keys/: array_networks.key  barracuda.key  ceragon_fibeair.key  exagrid_support.key  f5_bigip_root.key  loadbalancer_org.key  quantum_dxi.key  vagrant_insecure.key
cygor/credrecon/credentials/: __init__.py  loader.py  schema.py
cygor/credrecon/credentials/builtin/: cloud.yaml  databases.yaml  enterprise.yaml  generic.yaml  iot.yaml  snmp_communities.yaml  web.yaml
cygor/credrecon/sources/: __init__.py  base.py  cache.py  cirt.py  defaultcreds.py  sync.py
cygor/fingerprinting/: __init__.py  cache.py  cloud_detector.py  cloud_ipranges.py  cpe_extractor.py  fingerprint.py  huginn_normalize.py  lookup.py  os_intelligence.py  sync.py  verdict.py
cygor/fingerprinting/patterns/: __init__.py  banner_patterns.py  dhcp_patterns.py  mdns_patterns.py  vendor_patterns.py
cygor/fingerprinting/scripts/: audit_patterns.py  fix_duplicate_macs.py  test_device_classification.py  validate_patterns.py
cygor/modules/: __init__.py  base.py  dbprobe.py  dnsexplorer.py  exporters.py  ftpexplorer.py  ldapexplorer.py  lockon.py  nfsexplorer.py  rpcexplorer.py  schema.py  smbexplorer.py  smtpexplorer.py  snmpexplorer.py  template_module.py  webenum.py
cygor/webapp/: __init__.py  config.py  credrecon_tasks.py  db.py  db_adapters.py  enrichment_ai.py  enrichment_ai_patterns.py  enrichment_ingest.py  enrichment_mcp.py  findings.py  helpers.py  ingest.py  main.py  models.py  scheduler.py  search_builder.py  search_parser.py  simple_auth.py  startup_logger.py  task_config.py  tasks.py  unified_tasks.py
cygor/webapp/alembic/: env.py
cygor/webapp/alembic/versions/: 20260210_initial_schema.py  20260323_scheduler_resilience.py  20260415_vulnerability_intelligence.py  20260501_enrichment_tables.py  20260523_findings_table.py  20260526_drop_vulnscan_cve_tables.py  20260610_notes_collab.py  20260610_notes_table.py  20260620_note_attachments.py
cygor/webapp/routes/: __init__.py  core.py  credrecon.py  docs.py  enrichment.py  hosts.py  modules.py  notes.py  scheduler.py  search.py  sync.py  tasks.py
cygor/webapp/routes/settings/: __init__.py  database.py  general.py  plugins.py  proxy.py  workspaces.py
cygor/webapp/static/css/: cygor-components.css
cygor/webapp/static/js/: clipboard.js  cygor-datetime.js  cygor-terminal.js  cygor-utils.js  scan_timeline_d3.js
cygor/webapp/templates/: base.html  credrecon.html  credrecon_dashboard.html  credrecon_results.html  credrecon_scan_detail.html  docs.html  enrich_new.html  enrichment_dashboard.html  enrichment_run.html  host_detail.html  host_nmap.html  hosts.html  index.html  index_modern_cards.html  module_lockon.html  module_nfsexplore.html  module_nfsexplorer.html  module_run.html  module_screenshots.html  module_smbexplorer.html  modules_charts.html  modules_common.html  modules_gallery.html  modules_index.html  modules_unified.html  network_shares.html  note_edit.html  note_view.html  notes.html  pagination.html  parse_new.html  scan_new.html  schedule_detail.html  schedule_form.html  schedules.html  search.html  service_detail.html  services.html  settings.html  settings_unified.html  (+3 more)
cygor/wiki/: CLI-Reference.md  Common-Issues.md  Contributing.md  Credential-Testing.md  Data-Ingestion-And-Web-UI.md  Device-Fingerprinting.md  Docker-Deployment-Guide.md  Enumeration-Modules.md  First-Scan-Tutorial.md  IOC-Enrichment.md  Installation-Guide.md  Parsing-Results.md  Plugin-Development.md  README.md  Scanning-Guide.md  Setting-Up-Workspaces.md  Web-UI-Quick-Start.md
docs/: plugins.md
docs/examples/modules/: example_simple.py  example_wrapper.py  template_module.py
packaging/: build-common.sh  build-deb.sh  build-rpm.sh  build-tarball.sh  build-windows.ps1  cygor.spec.in  install-deps.sh
packaging/hooks/: hook-pydantic_core.py
tests/: conftest.py  test_cli.py  test_cloud_detection.py  test_db_migrations.py  test_dbprobe.py  test_dnsexplorer.py  test_enrich_preflight.py  test_enrichment_ingest.py  test_enrichment_routes.py  test_findings_ingest.py  test_fingerprint_cache.py  test_fingerprint_phase_f.py  test_fingerprint_pipeline.py  test_fingerprint_sync.py  test_ftpexplorer.py  test_host_parsing.py  test_huginn_normalize.py  test_ingest.py  test_ldapexplorer.py  test_lockon_webdata.py  test_models.py  test_module_nav_and_workspace.py  test_modules.py  test_nextsteps.py  test_os_identification.py  test_parse_text.py  test_plugin_loader.py  test_rpcexplorer.py  test_security_validators.py  test_smoke_imports.py  test_smtpexplorer.py  test_snmp_enum.py  test_snmpexplorer.py  test_task_concurrency.py  test_task_detail_redirect.py  test_task_output_streaming.py  test_virt_detection.py  test_webapp_routes.py  test_webapp_workspace_gate.py  test_webenum.py  (+2 more)
