[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cygor"
version = "0.1.0"
description = "Cygor: scan, parse, and enumerate"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "tjnull" }]

dependencies = [
  # Core
  "colorama>=0.4.6",
  "python-libnmap>=0.7.3",
  "requests>=2.31.0",
  "playwright>=1.46",
  "smbmap",
  "tabulate",
  'py-xdrlib; python_version >= "3.13"',

  # Web Interface
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",

  # Database (dual support)
  "sqlmodel>=0.0.22",
  "SQLAlchemy[asyncio]>=2.0",
  "asyncpg>=0.29.0",
  "aiosqlite>=0.19.0",

  # Parsing & IO
  "lxml>=5.2",
  "watchfiles>=0.24",
  "pandas>=2.2",
  "openpyxl>=3.1",

  # NFS Client
  #"pyNfsClient @ git+https://github.com/Pennyw0rth/NfsClient.git@master",
]

[project.optional-dependencies]
postgres = [
  asyncpg = ">=0.29.0,<0.30.0",
  "psycopg[binary,pool]>=3.2.1",
]
sqlite = [
  "aiosqlite>=0.19.0"
]
dev = [
  "alembic>=1.14.0",        # optional schema migration support
  "pytest>=8.3.0",
  "httpx>=0.27.0"
]

[project.scripts]
cygor = "cygor.cli:main"

[tool.setuptools.packages.find]
include = ["cygor", "cygor.*"]

[tool.setuptools.package-data]
"cygor.webapp" = [
  "templates/*.html",
  "templates/**/*.html",
  "static/*",
  "static/**/*"
]
